# BIbliaAPP

./: .gitignore  AGENT.md  README.md  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/: account-transfer-panel.tsx  activity.tsx  auth-modal.tsx  auth-screen.tsx  bible-reader.tsx  church-calendar.tsx  church-settings-panel.tsx  connection-banner.tsx  dashboard.tsx  devotionals.tsx  discipleship.tsx  favorites.tsx  feed.tsx  friend-request-button.tsx  group-appearance-editor.tsx  group-calendar.tsx  group-detail.tsx  group-join-modal.tsx  group-visual.tsx  groups.tsx  highlights-manager.tsx  joplin-login.tsx  login-prompt.tsx  mobile-app-banner.tsx  note-panel.tsx  note-rich-editor.tsx  notebook-sidebar.tsx  notes-section.tsx  notification-bell.tsx  personal-library.tsx  prayer-requests.tsx  privacy-settings.tsx  profile-section.tsx  reading-plans.tsx  references-explorer.tsx  references-rainbow-map.tsx  search-advanced.tsx  section-permissions-editor.tsx  statistics.tsx  strong-dictionary.tsx  (+5 more)
desktop/: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs-mobile/: 14-notas-autoguardado-y-preview.md  README.md  (+17 more)
docs-mobile-ios/: 01-estado-inicial-ios.md  02-builds-ios.md  03-checklist-ios.md  README.md
(+335 files in other folders)
